<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/itemsPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        tools:src="@drawable/movieicon"
        android:id="@+id/ivItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ivPagerHeight"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/marginTop">
          
          <TextView
              android:text="@string/rank"
              android:textStyle="bold"
              android:textColor="@android:color/holo_orange_dark"
              android:layout_weight="5"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
             />

          <ImageView
              android:id="@+id/ivRed"
              tools:src="@drawable/red_flag"
              android:layout_weight="1"
              android:layout_width="0dp"
              android:layout_height="wrap_content"/>
      </LinearLayout>
        
    <TextView
        android:id="@+id/tvRank"
        tools:text="rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/title"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/tvTitle"
            tools:text="Naslov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/fulltitle"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/tvFullTitle"
            tools:text="Naslov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/year"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/tvYear"
            tools:text="yyyy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/crew"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/tvCrew"
            tools:text="Naslov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/imdbrating"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/tvImdbrating"
            tools:text="broj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:progressBackgroundTint="@color/black"
            android:progressTint="@color/purple_700"
            android:rating="0"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:stepSize="1"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>


</ScrollView>